# 3d-physics-based-billiards-game

./: .gitignore  CMakeLists.txt  README.md
common/: camera.cpp  camera.h  light.cpp  model.h
pool2/: Box.h  Collision.h  Depth.fragmentshader  Plane.h  Player.cpp  Pool_Table.cpp  ShadowMapping.fragmentshader  SimpleTexture.fragmentshader  Sphere.h  StandardShading.fragmentshader  lab.cpp  tableGreen.cpp  table_base.cpp  table_edges.cpp  table_pockets.cpp  table_pockets.h
pool2/models/: ball.mtl  pool.mtl  table_edges.mtl  table_shell.mtl
up1092634/pool2/: Box.cpp  Collision.cpp  Cue.cpp  Cue.h  Plane.cpp  Player.h  Pool_Table.h  RigidBody.cpp  RigidBody.h  ShadowMapping.vertexshader  Sphere.cpp  tableGreen.h  table_base.h  table_edges.h
up1092634/pool2/models/: table_base.mtl  table_green.mtl  table_pockets.mtl
